<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.GetStartedActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/imagestart"
        android:id="@+id/iv_start"
        android:contentDescription="@string/gambar_pemandangan"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textStyle="bold"
            android:id="@+id/tv_title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/title_start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_desc"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/deskripsi_start"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:id="@+id/btn_start"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_layout"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>