<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/card_title" />
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/ll_lokasi"
            android:layout_height="wrap_content"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:padding="4dp"
                android:background="@drawable/bg_lokasi"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/tv_item_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/card_position" />
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:id="@+id/tv_item_desc"
            card_view:layout_constraintEnd_toEndOf="@+id/ll_lokasi"
            card_view:layout_constraintStart_toStartOf="@+id/ll_lokasi"
            card_view:layout_constraintTop_toBottomOf="@+id/ll_lokasi"
            card_view:layout_constraintBottom_toBottomOf="@id/img_item_photo"
            tools:text="@string/card_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>